--- a/Ex01/Ex01.vcxproj.filters
+++ b/Ex01/Ex01.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Examples.cpp">
+    <ClCompile Include="Ex01.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
